# ChangeLog for media-libs/qt-gstreamer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/qt-gstreamer/ChangeLog,v 1.15 2014/10/12 10:25:02 zlogene Exp $

  12 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> qt-gstreamer-0.10.3.ebuild,
  qt-gstreamer-1.2.0.ebuild:
  Add ~ppc keyword wrt bug #507896

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  qt-gstreamer-0.10.3.ebuild, qt-gstreamer-1.2.0.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*qt-gstreamer-1.2.0 (28 Jul 2014)

  28 Jul 2014; Michael Palimaka <kensington@gentoo.org>
  +qt-gstreamer-1.2.0.ebuild:
  Version bump.

  04 May 2014; Markus Meier <maekke@gentoo.org> qt-gstreamer-0.10.3.ebuild:
  add ~arm, bug #507896

  10 Mar 2014; Johannes Huber <johu@gentoo.org> -qt-gstreamer-0.10.2.ebuild:
  Remove old.

  10 Mar 2014; Johannes Huber <johu@gentoo.org> qt-gstreamer-0.10.3.ebuild:
  amd64 stable, bug #495744

  10 Mar 2014; Johannes Huber <johu@gentoo.org> qt-gstreamer-0.10.3.ebuild:
  Restrict tests, 1 of 19 is failing, bug #497880.

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  qt-gstreamer-0.10.3.ebuild:
  x86 stable wrt bug #495744

*qt-gstreamer-0.10.3 (09 Nov 2013)

  09 Nov 2013; Johannes Huber <johu@gentoo.org> +qt-gstreamer-0.10.3.ebuild:
  Version bump.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> qt-gstreamer-0.10.2.ebuild:
  Move Qt dependencies to the new category

  11 Nov 2012; Davide Pesavento <pesa@gentoo.org> qt-gstreamer-0.10.2.ebuild:
  Remove false dependency on boost-build.

  11 Sep 2012; Johannes Huber <johu@gentoo.org> qt-gstreamer-0.10.2.ebuild:
  Add slot dependency on media-libs/gst*.

  30 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  qt-gstreamer-0.10.2.ebuild:
  Add boost dependency, bug 432242

  31 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> qt-gstreamer-0.10.2.ebuild:
  Stable on amd64 and x86 as it works just fine.

*qt-gstreamer-0.10.2 (12 Jul 2012)
